# ComplexPlotting

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ComplexPlotting/: CMakeLists.txt  PlotWindow.cpp  PlotWindow.hpp  PlotWindowException.hpp  PlotWindowManager.hpp  main.cpp
shaders/: grid.frag  grid.vert  plot.frag  plot.vert
src/: CMakeLists.txt  PlotManager.cpp  PlotManager.hpp  PlotWindow.cpp  PlotWindow.hpp  Shader.cpp  Shader.hpp  ShaderProgram.hpp  main.cpp  util.hpp
src/objects/: Shader.cpp  Shader.hpp
src/primitives/: IDrawable.hpp  Quad.hpp  Triangle.hpp
src/shader/: basic.frag  basic.vert
src/shaders/: triangle.frag  triangle.vert
